react-router implementation

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -46,7 +46,7 @@ display: flex;
 justify-content: center;
 }
 
-.remove-button{
+button{
 flex-basis: 48%;
 color: red;
 font-size: 15px;
@@ -66,4 +66,43 @@ button:hover,.button:hover, button:focus, .button:focus {
     background: url("https://cdn-icons-png.flaticon.com/512/60/60740.png") center no-repeat;
     background-size: contain;
     border: none;
+}
+
+.form {
+    background: white;
+    margin: 0 auto;
+    max-width: 360px;
+    padding: 45px;
+    text-align: center;
+}
+
+.form input {
+    font-family: sans-serif;
+    background: #f2f2f2;
+    width: 100%;
+    border: none;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+    margin: 0 0 15px;
+}
+
+.form button{
+    font-family: sans-serif;
+    text-transform: uppercase;
+    background: #065784;
+    width: 100%;
+    border: none;
+    padding: 15px;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.form button:hover{
+    background-color: #7b8589;
+}
+
+button:hover{
+    border-color: blue;
 }
