Redux - added 2 actions, to remove photo and to add photo

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -106,3 +106,8 @@ button:hover,.button:hover, button:focus, .button:focus {
 button:hover{
     border-color: blue;
 }
+
+h1 a{
+    color: black;
+    text-decoration: none;
+}
